[package]
name = "libhydrogen"
version = "0.1.5"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A modern and easy to use cryptography library"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-libhydrogen"
repository = "https://github.com/jedisct1/rust-libhydrogen"
edition = "2018"

[dependencies]
libhydrogen-sys = "0.7.3"
